--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
