--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "robinhood",
-  "version": "0.1.0",
+  "name": "portfolio_watch",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.2",
-    "@types/react": "^17.0.25",
+    "@types/node": "^16.10.8",
+    "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
+    "@types/react-redux": "^7.1.19",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-number-format": "^4.4.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-number-format": "^4.7.3",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "recharts": "^1.8.5",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
