--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
     "recharts": "^1.8.5",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "react-scripts": "^4.0.3"
   }
 }
