--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.8",
-    "@types/react": "^17.0.29",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.19",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -54,7 +49,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1",
-    "react-scripts": "^4.0.3"
+    "@types/react-router-dom": "^5.3.2",
+    "react-scripts": "^4.0.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.8",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.19"
   }
 }
