--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "formik": "^2.2.9",
     "immutable": "^4.0.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
@@ -26,7 +27,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,12 +52,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2",
-    "react-scripts": "^4.0.3",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.8",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.19"
+    "@types/react-redux": "^7.1.19",
+    "@types/react-router-dom": "^5.3.2",
+    "react-scripts": "^4.0.3"
   }
 }
